# python-cookbook-in-modern-cpp

./: .clang-format  .gitmodules  README.md  README_ja.md
cmake/: all.cmake  date.cmake  fmt.cmake  libs.cmake  vars.cmake  zmq.cmake
src/: CMakeLists.txt
src/1/calculating_with_dictionaries/: CMakeLists.txt  example.cpp
src/1/determine_the_top_n_items_occurring_in_a_list/: CMakeLists.txt  example.cpp
src/1/filtering_list_elements/: CMakeLists.txt  example.cpp
src/1/finding_out_what_two_dictionaries_have_in_common/: CMakeLists.txt  example.cpp
src/1/finding_the_largest_or_smallest_n_items/: CMakeLists.txt  example.cpp
src/1/implementing_a_priority_queue/: CMakeLists.txt  example.cpp
src/1/keeping_the_last_n_items/: CMakeLists.txt  example.cpp
src/1/mapping_names_to_sequence_elements/: CMakeLists.txt  example.cpp
src/1/removing_duplicates_from_a_sequence_while_maintaining_order/: CMakeLists.txt  example.cpp
src/1/sort_a_list_of_dictionaries_by_a_common_key/: CMakeLists.txt  example.cpp
src/1/sort_objects_without_native_comparison_support/: CMakeLists.txt  example.cpp
src/1/transforming_and_reducing_data_at_the_same_time/: CMakeLists.txt  example.cpp
src/11/creating_a_tcp_server/: CMakeLists.txt  echoclient.cpp  echoserv.cpp  echoserv2.cpp  echoserv3.cpp
src/12/how_to_communicate_between_threads/: CMakeLists.txt  example1.cpp  example2.cpp
src/12/how_to_create_a_thread_pool/: CMakeLists.txt  example1.cpp
src/2/combining_and_concatenating_strings/: CMakeLists.txt  example.cpp
src/3/determining_last_fridays_date/: CMakeLists.txt  example.py
src/3/finding_the_date_range_for_the_current_month/: CMakeLists.txt  example.cpp
src/4/creating_new_iteration_patterns_with_generators/: CMakeLists.txt  example.cpp
src/4/delegating-iteration/: CMakeLists.txt  example.cpp
src/4/generators_with_state/: CMakeLists.txt  example.cpp
src/4/how_to_flatten_a_nested_sequence/: CMakeLists.txt  example.cpp
src/4/iterate_over_the_index-value_pairs_of_a_list/: CMakeLists.txt  example.cpp
src/4/iterating_in_reverse/: CMakeLists.txt  example.cpp
src/4/iterating_in_sorted_order_over_merged_sorted_iterables/: CMakeLists.txt  example.cpp
src/4/iterating_on_items_in_separate_containers/: CMakeLists.txt  example.cpp
src/7/accessing_variables_defined_inside_a_closure/: CMakeLists.txt  example1.cpp
src/7/carrying_extra_state_with_callback_functions/: CMakeLists.txt  example.cpp
src/7/functions_that_accept_any_number_of_arguments/: CMakeLists.txt  example.cpp
src/7/functions_that_only_accept_keyword_arguments/: CMakeLists.txt  example.cpp
src/7/functions_with_default_arguments/: CMakeLists.txt  example.cpp
src/7/inlining_callback_functions/: CMakeLists.txt  example.cpp
src/7/making_an_n-argument_callable_work_as_a_callable_with_fewer_arguments/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp
src/9/applying_decorators_to_class_and_static_methods/: CMakeLists.txt  example.cpp
