cmake_minimum_required(VERSION 3.3)
project(python-cookbook-in-modern-cpp)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/../cmake/")
include(all)

add_subdirectory(1/calculating_with_dictionaries)
add_subdirectory(1/determine_the_top_n_items_occurring_in_a_list)
add_subdirectory(1/filtering_list_elements)
add_subdirectory(1/finding_out_what_two_dictionaries_have_in_common)
add_subdirectory(1/finding_the_largest_or_smallest_n_items)
add_subdirectory(1/implementing_a_priority_queue)
add_subdirectory(1/keeping_the_last_n_items)
add_subdirectory(1/mapping_names_to_sequence_elements)
add_subdirectory(1/removing_duplicates_from_a_sequence_while_maintaining_order)
add_subdirectory(1/sort_a_list_of_dictionaries_by_a_common_key)
add_subdirectory(1/sort_objects_without_native_comparison_support)
add_subdirectory(1/transforming_and_reducing_data_at_the_same_time)
add_subdirectory(2/combining_and_concatenating_strings)
add_subdirectory(3/determining_last_fridays_date)
add_subdirectory(3/finding_the_date_range_for_the_current_month)
add_subdirectory(4/creating_new_iteration_patterns_with_generators)
add_subdirectory(4/delegating-iteration)
add_subdirectory(4/generators_with_state)
add_subdirectory(4/how_to_flatten_a_nested_sequence)
add_subdirectory(4/iterate_over_the_index-value_pairs_of_a_list)
add_subdirectory(4/iterating_in_reverse)
add_subdirectory(4/iterating_in_sorted_order_over_merged_sorted_iterables)
add_subdirectory(4/iterating_on_items_in_separate_containers)
add_subdirectory(7/accessing_variables_defined_inside_a_closure)
add_subdirectory(7/carrying_extra_state_with_callback_functions)
add_subdirectory(7/functions_that_accept_any_number_of_arguments)
#add_subdirectory(7/functions_that_only_accept_keyword_arguments)
#add_subdirectory(7/functions_with_default_arguments)
add_subdirectory(7/inlining_callback_functions)
add_subdirectory(7/making_an_n-argument_callable_work_as_a_callable_with_fewer_arguments)
add_subdirectory(9/applying_decorators_to_class_and_static_methods)
add_subdirectory(11/creating_a_tcp_server)
add_subdirectory(12/how_to_communicate_between_threads)
add_subdirectory(12/how_to_create_a_thread_pool)
